<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TextView2"
        android:layout_width="245dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:text="@string/welcome_login"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="17dp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="233dp" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/username_login"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="307dp" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="305dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/password_login"
        android:password="true"
        android:singleLine="true"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="374dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="102dp"
        android:layout_height="54dp"
        android:layout_marginBottom="164dp"
        android:onClick="Cari"
        android:text="@string/cari_kostan"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00555555"
        android:text="@string/register"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="509dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="196dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_kostan"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="26dp" />

</androidx.constraintlayout.widget.ConstraintLayout>